# lingzuRS00_motor_driver

./: README.md  pyproject.toml
esp32_driver/: CAN_GUIDE.md  CMakeLists.txt  DARAN_MOTOR_LIBRARY.md  sdkconfig
esp32_driver/DaRan/03-上位机软件/Dr Actuator Terminal v2.0/: A03-MM.txt  A15-ST.txt  A60-ST.txt  B0x-HA.txt  S05-MD.txt
esp32_driver/DaRan/04-库函数及其说明书/stm32/CAN版本/example/: 0-STM32控制教程视频链接.txt
esp32_driver/main/: CMakeLists.txt  Kconfig.projbuild  baudrate_test.c  baudrate_test.h  daran_motor_can.c  daran_motor_can.h  daran_motor_example.c  daran_motor_example.h  lingzu_motor_can.c  lingzu_motor_can.h  lingzu_test_main.c  lingzu_test_main.h  rs00_driver.c  rs00_driver.h  twai_self_test_example_main.c  utils.c  utils.h
esp32_driver/serial_diag/: serial_diag.ino
esp32_driver/twai_can_example/: twai_can_example.ino
esp32_driver/ws2812_off/: ws2812_off.ino
src/rs00/: driver.py  main.py  utils.py
